Worked on schedule

--- a/src/html/components/pc/pc-login-view/pc-login-view.html
+++ b/src/html/components/pc/pc-login-view/pc-login-view.html
@@ -19,7 +19,8 @@
 			properties: {
 				mobile: {
 					type: Boolean,
-					readOnly: true
+					readOnly: true,
+					reflectToAttribute: true
 				},
 			},
 			ready: function() {
