--- a/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.css
+++ b/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.css
@@ -1,49 +1,59 @@
 :host {
 	width: 100%;
 	height: 100%;
-}
-:host .container {
-	border-width: 1px;
-	border-color: #ddd;
-	padding: 19px;
-	margin-bottom: 20px;
-	box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
-	border-radius: 2px;
-	border-top-width: 0;
+	display: block;
+	padding-top: 50px;
+	background-color: #EEEEEE;
+	font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 :host:not([active]) {
 	display: none;
 }
-:host table {
-	margin: 4em auto;
-	position: absolute;
-	left: 0;
-	text-align: left;
-	padding-left: 5%;
-	border-spacing: 0;
-	border-collapse: collapse;
-	box-sizing: border-box;
-	border-color: grey;
-	width: 100%;
-	
-}
-:host thead {
-	vertical-align: middle;
-	border-color: inherit;
-	display: table-header-group;
-}
-:host th {
-	font-weight: bold;
-	padding: 8px;
-	line-height:  1.42857143px;
-	vertical-align: top;
-	border-top: 1px solid #ddd;
-	text-align: left;
-	font-weight: bold;
-	box-sizing: border-box;
-}
-:host tbody {
-	border-spacing: 2px;
-}
 .col-time {
+}
+.col-block {
+}
+.col-classname {
+	width: 40%;
+}
+.col-teacher {
+	width: 20%;
+}
+:host[mobile] .container {
+	margin-top: 50px;
+}
+:host a.flat {
+	color: black;
+	text-decoration: none;
+}
+.attendance {
+	text-align: center;
+}
+.attendance span {
+	width: 100%;
+	display: block;
+	border-radius: 10px;
+	height: 100%;
+}
+:host[mobile] td.attendance {
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+.attendance:not(.future) span {
+	color: white;
+}
+.attendance.attended span {
+	background-color: #27ae60;
+}
+.attendance.excused span{
+	background-color: #2980b9;
+}
+.attendance.inexcused span{
+	background-color: #c0392b;
+}
+:host[mobile] .separator {
+	display: none;
+}
+:host[mobile] .starttime,:host[mobile] .endtime {
+	display: block;
 }
