--- a/src/html/components/pc/pc-navbar/pc-navbar.css
+++ b/src/html/components/pc/pc-navbar/pc-navbar.css
@@ -9,8 +9,12 @@
 	left: 0;
 	line-height: 1.428;
 	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
 	/*min-height: 44px;*/
 	min-height: 50px;
+	padding-left: 15px;
+	padding-right: 15px;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -23,6 +27,20 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 }
+:host #shadow {
+	box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
+	height: 6px;
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 60px;
+	width: 100vw;
+	transition: opacity 0.5s;
+}
+:host[shadow] #shadow{
+	opacity: 1;
+}
 :host::before {
 	display: table;
 	content: " ";
@@ -30,13 +48,6 @@
 }
 .mh50 {
 	min-height: 50px;
-}
-.navbar-container {
-	height: 100%;
-	margin-right: auto;
-	margin-left: auto;
-	padding-right: 15px;
-	padding-left: 15px;
 }
 .navbar-header {
 	display: block;
