--- a/src/html/components/pc/pc-navbar/pc-navbar.html
+++ b/src/html/components/pc/pc-navbar/pc-navbar.html
@@ -8,7 +8,7 @@
 			<paper-button class="navbar-brand mh50" href="#">{{brand}}</paper-button>
 		</div>
 		<div class="navbar-titlebar">
-			<span>{{title}}</span>
+			{{title}}
 		</div>
 		<ul class="navbar-itemlist">
 			<paper-button href="#schedule" name="schedule">Schedule</paper-button>
