--- a/src/html/components/pc/pc-stage/pc-stage.css
+++ b/src/html/components/pc/pc-stage/pc-stage.css
@@ -42,6 +42,9 @@ paper-toolbar {
 	height: calc(100vh - 60px);
 	margin-top: 60px;
 }
+:host[mobile] #mainWrapper [main] {
+	margin-top: 50px;
+}
 .transition > #mainWrapper {
 	transition: left ease-in-out 0.3s, padding ease-in-out 0.3s;
 }
