--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -1,5 +1,5 @@
 <link rel="import" href="/components/polymer/polymer.html">
-<pc-loader target='["iron-media-query","paper-header-panel","pc-sidebar","pc-navbar","pc-login-view","pc-student-schedule-view","pc-student-assignments-view","pc-student-classpage-view","pc-student-assignment-view"]'></pc-loader>
+<pc-loader target='["iron-media-query","paper-header-panel","pc-sidebar","pc-navbar","pc-login-view","pc-student-schedule-view","pc-loading-view","pc-student-assignments-view","pc-student-classpage-view","pc-student-assignment-view"]'></pc-loader>
 <dom-module id="pc-stage">
 	<link rel="import" type="css" href="pc-stage.css"/>
 	<template>
@@ -13,6 +13,7 @@
 					<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" on-tap="toggleDrawer"></paper-icon-button>
 				</pc-navbar>
 				<div main>
+					<pc-loading-view class="pc-view stage-mobile-observer" id="loading"></pc-loading-view>
 					<pc-login-view class="pc-view stage-mobile-observer pc-default-view" id="login"></pc-login-view>
 					<pc-student-schedule-view class="pc-view stage-mobile-observer" id="schedule"></pc-student-schedule-view>
 					<pc-student-assignments-view class="pc-view stage-mobile-observer" id="assignments"></pc-student-assignments-view>
@@ -129,6 +130,7 @@
 				tview.trigger(event);
 				if (event.isDefaultPrevented())
 					return;
+				
 				tview.attr('active','');
 				tview.trigger('pc-view-postshow',{args:args});
 				//TODO transition code
