--- a/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
+++ b/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
@@ -5,9 +5,37 @@
 	<link rel="import" type="css" href="/css/components.css"/>
 	<template>
 		<h1 class="page-header">Assignment Name</h1>
-		<div class="container">
-			<p>This is what you have to do...</p>
+		<div class="container" id="details">
 		</div>
+		<ul class="container rightpanel">
+			<li class="status assigned"><span></span></li>
+			<li class="dates">
+				<table>
+					<thead>
+						<tr>
+							<th class="assigned">Assigned</th>
+							<th class="spacer"></th>
+							<th class="due">Due</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="assigned"><span></span></td>
+							<td class="spacer"></td>
+							<td class="due"><span></span></td>
+						</tr>
+					</tbody>
+				</table>
+			</li>
+			<li class="files">
+				<h2>Files</h2>
+				<ul>
+					<li>File</li>
+					<li>File</li>
+					<li>File</li>
+				</ul>
+			</li>
+		</ul>
 	</template>
 	<script>
 		Polymer({
@@ -25,6 +53,53 @@
 				}
 			},
 			ready: function() {
+				this.scopeSubtree(this.$$('.files>ul'), true);
+				$(this).on('pc-view-preshow', function(e) {
+					var resourceName = 'assignment/'+e.args[0]+'/'+e.args[1];
+					var value = ResourceLoader.instance.getImmediate(resourceName);
+					if (value === undefined) {
+						e.preventDefault();
+						window.stage.showView('loading');
+						ResourceLoader.instance.require(resourceName).then(
+							function(assignment) {
+								if (window.location.hash.startsWith('#assignment/'))
+									window.stage.showView('assignment',e.args);
+							}.bind(this),
+							function(error) {
+								console.warn(error);
+							});
+					} else {
+						this.buildWith(value);
+					}
+				});
+			},
+			buildWith: function(assignment) {
+				console.info(assignment);
+				if (window.stage.mobile)
+					window.stage.title = assignment.name;
+				var $this = $(this);
+				$this.find('.page-header').html(assignment.name);
+				var lines = assignment.details.split('\n');
+				$(this.$.details).empty();
+				for (var i in lines)
+					$(this.$.details).append($('<p>').html(lines[i]));
+				
+				$this.find('.dates tbody .assigned').html(assignment.assigned);
+				$this.find('.dates tbody .due').html(assignment.due);
+				
+				$this.find('.status').removeClass('future assigned graded completed overdue').addClass(assignment.status);
+				
+				var filelist = $this.find('.files>ul');
+				filelist.empty();
+				if (assignment.files.length == 0) {
+					$this.find('.files').css({display:'none'});
+				} else {
+					for (var i in assignment.files) {
+						var file = assignment.files[i];
+						var entry = $('<li>').html(file.name);
+						filelist.append(entry);
+					}
+				}
 			}
 		});
 	</script>
